test/error/parse/ExpectBrace1Close.mod
MODULE ExpectBrace1Close;
PROCEDURE P(x: INTEGER;
END P;
END ExpectBrace1Close.
